--- a/_data/reviews/review-ne-mogu-reshitsia-na-pokupku--dymokhod-iz-nerzhaveiki.yaml
+++ b/_data/reviews/review-ne-mogu-reshitsia-na-pokupku--dymokhod-iz-nerzhaveiki.yaml
@@ -1,7 +1,7 @@
 ---
 _id: 84262c1297aa484ffca7507003cd11683476c957
 name: Мастер_007
-comment: Ничего страшного в покупке  дымоход из нержавеющей стали  нет, вам помогут
+comment: Ничего страшного в покупке дымохода из нержавеющей стали нет, вам помогут
   с выбором - <a href="https://печи1.рф/product-category/dymohod-nerzhavejushhij/">https://печи1.рф/product-category/dymohod-nerzhavejushhij/</a>.
   У нас знакомые брали. Всем довольны.
 product: ne-mogu-reshitsia-na-pokupku--dymokhod-iz-nerzhaveiki
