--- a/_data/reviews/review-ne-mogu-reshitsia-na-pokupku-radiatory-otopleniia.yaml
+++ b/_data/reviews/review-ne-mogu-reshitsia-na-pokupku-radiatory-otopleniia.yaml
@@ -1,7 +1,7 @@
 ---
 _id: e0df01252781f1e2adaa344c2a84dda4d66be62f
 name: Никита С.
-comment: Ничего страшного в покупке радиаторы отопления нет, вам помогут с выбором
+comment: Ничего страшного в покупке радиатора отопления нет, вам помогут с выбором
   - <a href="https://teplokomplex.ru/product-category/radiatory">https://teplokomplex.ru/product-category/radiatory</a>.
   У нас знакомые брали. Всем довольны.
 product: ne-mogu-reshitsia-na-pokupku-radiatory-otopleniia
