--- a/_data/reviews/review-ne-mogu-reshitsia-na-pokupku-ulichnuiu-elku.yaml
+++ b/_data/reviews/review-ne-mogu-reshitsia-na-pokupku-ulichnuiu-elku.yaml
@@ -1,7 +1,7 @@
 ---
 _id: fd51c9a21f125d14e5ffe56a75e50d94eb4165ad
 name: Гринев А.
-comment: Ничего страшного в покупке уличную новогоднюю елку  нет, вам помогут с выбором
+comment: Ничего страшного в покупке уличной новогодней елки нет, вам помогут с выбором
   - <a href="http://www.eliru.ru/category/bolschie-ulichnie-elki/">http://www.eliru.ru/category/bolschie-ulichnie-elki/</a>.
   У нас знакомые брали. Всем довольны.
 product: ne-mogu-reshitsia-na-pokupku-ulichnuiu-elku
