--- a/_data/reviews/review-ne-mogu-reshitsia-na-pokupku-nozhnitcy-dlia-parikmakherov.yaml
+++ b/_data/reviews/review-ne-mogu-reshitsia-na-pokupku-nozhnitcy-dlia-parikmakherov.yaml
@@ -1,7 +1,7 @@
 ---
 _id: 880586a897432d6a7a264c03e747866db237e9bc
 name: love_hair
-comment: Ничего страшного в покупке парикмахерские ножницы нет, вам помогут с выбором
+comment: Ничего страшного в покупке парикмахерских ножниц в интернете нет, вам помогут с выбором
   - <a href="https://parlux.ru/category/nozhnicy/">https://parlux.ru/category/nozhnicy/</a>.
   У нас знакомые брали. Всем довольны.
 product: ne-mogu-reshitsia-na-pokupku-nozhnitcy-dlia-parikmakherov
